# rsvim

./: .editorconfig  .gitignore  .gitmodules  .markdownlint.jsonc  .npmignore  .nvim.lua  .nvimrc  .pre-commit-hooks  .prettierignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  DOCUMENTATION.md  MIT_LICENSE  README.md  RELEASE.md  audit.toml  biome.json  cliff.toml  clippy.toml  codecov.yml  committed.toml  deno.json  deny.toml  dev.cmd  dev.py  dev.sh  develop.py  develop.sh  fs_open.rs  justfile  log.txt  miri.py  mise.toml  package-lock.json  package.json  release-please-config.json  release.sh  release.toml  rustfmt.toml  (+4 more)
rsvim_allocator/: Cargo.toml  release.toml
rsvim_allocator/src/: lib.rs
rsvim_cli/: CHANGELOG.md  Cargo.toml  RSVIM_VERSION_INFO.TXT  build.rs  release.toml
rsvim_cli/src/: lib.rs  release.toml
rsvim_core/: CHANGELOG.md  CHANGELOG.md.bak  Cargo.toml  RSVIM_LONG_HELP.TXT  RSVIM_SHORT_HELP.TXT  release.toml
rsvim_core/bench/: snapshot.rs  startup.rs
rsvim_core/benches/: canvas_shade.rs  snapshot.rs  startup.rs  viewport_search.rs  viewport_search_nowrap.rs  viewport_search_wrap_linebreak.rs  viewport_search_wrap_nolinebreak.rs
rsvim_core/src/: buf.rs  buf_tests.rs  cart.rs  cfg.rs  cli.rs  cli_tests.rs  cmdltext.rs  cmdtext.rs  command.rs  conf.rs  constant.rs  constant_tests.rs  consts.rs  consts_tests.rs  content.rs  coord.rs  coord_tests.rs  coordinate.rs  dbg.rs  defaults.rs  envar.rs  err.rs  evloop.rs  evloop_mock.rs  ex_command.rs  excommand.rs  glovar.rs  hl.rs  hl_tests.rs  js.rs  js_tests.rs  lib.rs  lock.rs  locks.rs  log.rs  msg.rs  prelude.rs  res.rs  results.rs  signal.rs  (+8 more)
rsvim_core/src/buf/: async_ops.rs  async_read_ext.rs  async_write_ext.rs  change.rs  change_tests.rs  cidx.rs  idx.rs  opt.rs  opt_tests.rs  snapshot.rs  text.rs  text_tests.rs  undo.rs  undo_tests.rs  unicode.rs  unicode_tests.rs  widx.rs
rsvim_core/src/buf/idx/: cidx.rs  lidx.rs  widx.rs
rsvim_core/src/buf/opt/: file_encoding.rs  file_encoding_tests.rs  file_format.rs  file_format_tests.rs
rsvim_core/src/buf/text/: cache.rs  cache_stats.rs  cache_tests.rs  cidx.rs  cidx_tests.rs  opt.rs  string_cache.rs  width_cache.rs
rsvim_core/src/buf/widx/: cidx.rs  lidx.rs
rsvim_core/src/cfg/: path_cfg.rs  path_cfg_tests.rs
rsvim_core/src/chan/: jsrt.rs  master.rs
rsvim_core/src/conf/: path_config.rs  path_config_tests.rs
rsvim_core/src/constant/: path_config.rs  path_config_tests.rs
rsvim_core/src/consts/: path_config.rs  path_config_tests.rs
rsvim_core/src/dbg/: buf.rs
rsvim_core/src/defaults/: ascii.rs  ascii_tests.rs  buf.rs  cmd.rs  grapheme.rs  win.rs
rsvim_core/src/defaults/ascii/: end_of_line.rs  end_of_line_tests.rs
rsvim_core/src/envar/: path_config.rs  path_config_tests.rs
rsvim_core/src/evloop/: ctx.rs  mock.rs  msg.rs  reader.rs  task.rs  tui.rs  ui.rs  writer.rs
rsvim_core/src/evloop/reader/: event_stream_reader.rs  mock_reader.rs
rsvim_core/src/evloop/task/: startup.rs
rsvim_core/src/evloop/writer/: dev_null_writer.rs  editor_mode_writer.rs  editor_writer.rs  headless_mode_writer.rs  headless_writer.rs  tui.rs
rsvim_core/src/ex_command/: parser.rs
rsvim_core/src/excommand/: registry.rs
rsvim_core/src/hl/: color.rs  colorscheme.rs  data.rs  data.rs.bak  style.rs  syn.rs
rsvim_core/src/js/: binding.rs  callback.rs  command.rs  command_tests.rs  convert.rs  converter.rs  converter_tests.rs  encdec.rs  err.rs  ex_command.rs  exception.rs  future.rs  futures.rs  hook.rs  hook_tests.rs  loader.rs  loader_tests.rs  module.rs  module_tests.rs  msg.rs  pending.rs  resource.rs  transpiler.rs  transpiler_tests.rs
rsvim_core/src/js/binding/: global_rsvim.rs  global_this.rs
rsvim_core/src/js/callback/: ex_command.rs
rsvim_core/src/js/command/: attr.rs  attr_tests.rs  ctx.rs  def.rs  def_tests.rs  opt.rs  opt_tests.rs
rsvim_core/src/js/ex_command/: def.rs  opt.rs  opt_tests.rs
rsvim_core/src/js/future/: command.rs  ex_command.rs
rsvim_core/src/js/futures/: command.rs
rsvim_core/src/js/loader/: core_loader.rs  fs_loader.rs  fs_loader_tests.rs  url_loader.rs  url_loader_tests.rs
rsvim_core/src/js/module/: es_module.rs  es_module_tests.rs  import_map.rs  module.rs  module_graph.rs  module_map.rs  module_map_tests.rs
rsvim_core/src/js/resource/: child_process.rs  command.rs  file.rs  text_decoder.rs
rsvim_core/src/js/runtime/: 00__infra.d.ts  00__infra.js.bak  00__web.d.ts  00__web.js  00__web.min.js  00__web.ts  01__rsvim.d.ts  01__rsvim.js  01__rsvim.min.js  01__rsvim.ts  10__web.d.ts  10__web.ts  50__rsvim.d.ts  50__rsvim.ts
rsvim_core/src/js/transpiler/: jsx.rs  jsx.rs.bak  tsx.rs  typescript.rs  typescript.rs.bak  typescript_tests.rs  typescript_tests.rs.bak  wasm.rs
rsvim_core/src/msg/: jsrt.rs  jsrt_sink.rs  master.rs  master_sink.rs
rsvim_core/src/state/: command.rs  fsm.rs  mode.rs  mode_tests.rs  ops.rs
rsvim_core/src/state/fsm/: cmdline.rs  cmdline_backward.rs  cmdline_ex.rs  cmdline_ex_tests.rs  cmdline_forward.rs  cmdline_search_backward.rs  cmdline_search_forward.rs  command_line.rs  command_line_ex.rs  command_line_ex_command_variant.rs  command_line_ex_tests.rs  command_line_ex_variant.rs  command_line_message.rs  command_line_search_backward.rs  command_line_search_backward_variant.rs  command_line_search_forward.rs  (+11 more)
rsvim_core/src/syntax/: edit.rs  lang.rs  lang_syntax.rs  loader.rs  parser.rs  parsing.rs  query.rs
rsvim_core/src/test/: buf.rs  constant.rs  evloop.rs  js.rs  log.rs  state.rs  tree.rs
rsvim_core/src/tests/: buf.rs  cfg.rs  constant.rs  evloop.rs  fsm.rs  gh.rs  js.rs  log.rs  tree.rs  viewport.rs
rsvim_core/src/ui/: canvas.rs  canvas_tests.rs  tree.rs  tree_tests.rs  util.rs  viewport.rs  viewport_tests.rs  widget.rs
rsvim_core/src/util/: fixed_deque.rs  flag.rs  lite_set.rs  lock.rs  path.rs  paths.rs  range_tree.rs  range_tree_map.rs  range_tree_map_tests.rs  range_tree_tests.rs  ringbuf.rs  struct_id.rs  struct_id_tests.rs
rsvim_macro/: CHANGELOG.md  CHANGELOG.md.bak  Cargo.toml  release.toml
rsvim_macro/src/: js.rs  lib.rs
rsvim_macro/src/js/: converter.rs
(+345 files in other folders)
