[workspace]
members = ["rsvim_core", "rsvim_cli"]
resolver = "3"

[workspace.package]
version = "0.1.2"
edition = "2024"
rust-version = "1.89.0"
authors = ["Lin Rongbin <linrongbin16@outlook.com>"]
repository = "https://github.com/rsvim/rsvim"
readme = "README.md"
homepage = "https://rsvim.github.io/"
documentation = "https://rsvim.github.io/"
license = "Vim"
keywords = ["vim", "neovim", "text-editor", "editor", "terminal"]
categories = ["text-editors"]
exclude = [".DS_Store"]

[workspace.dependencies]
rsvim_core = { version = "0.1.2", path = "./rsvim_core" }

# anyhow = "1"
ascii = "1.1"
arcstr = { version = "1.2", features = ["std"] }
assert_fs = "1.1"
async-trait = "0.1"
bitflags = "2.11"
# bytes = { version = "1" }
compact_str = "0.9"
crossterm = { version = "0.29", features = ["event-stream"] }
derive_builder = "0.20"
dirs = "6.0"
encoding_rs = "0.8"
env_filter = "1.0"
fern = "0.7"
foldhash = "0.2"
futures = "0.3"
geo = "0.32"
git2 = "0.20"
# heed = "0.20.5"
icu = { version = "2", features = ["compiled_data"] }
itertools = "0.14"
jiff = { version = "0.2", features = ["tzdb-bundle-always"] }
lexopt = "0.3"
litemap = "0.8"
log = { version = "0.4", features = [
  "max_level_trace",
  "release_max_level_error",
] }
lru = "0.16"
mimalloc-safe = "0.1"
normpath = "1.5"
num-traits = "0.2"
oxc_resolver = "11.17"
once_cell = { version = "1.21", features = ["parking_lot"] }
parking_lot = "0.12"
path-absolutize = "3.1"
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
paste = "1.0"
# rand = "0.8.5"
regex = "1.12"
ropey = { version = "1.6", default-features = false }
serde = { version = "1", features = ["derive"] }
# serde_json = "1.0"
snmalloc-rs = "0.3"
strum = "0.27"
strum_macros = "0.27"
taffy = "0.9"
tikv-jemallocator = "0.6"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
# tokio-stream = { version = "0.1.16", features = ["full"] }
toml = { version = "1.0", features = ["fast_hash"] }
# tracing = { version = "0.1", features = [
#   "max_level_trace",
#   "release_max_level_error",
# ] }
# tracing-appender = { version = "0.2", features = ["parking_lot"] }
# tracing-subscriber = { version = "0.3", features = [
#   "env-filter",
#   "parking_lot",
# ] }
tree-sitter = "0.26"
tree-sitter-loader = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-md = "0.5"
tree-sitter-toml-ng = "0.7"
unicode-width = "0.2"
# url = "2.5.7"
# zstd = "0.13.3"

# NOTE: Javascript dependencies always keep the same with `deno` {

# deno: https://github.com/denoland/deno/blob/v2.5.4/Cargo.toml
# deno_core: https://github.com/denoland/deno_core/blob/0.362.0/Cargo.toml
# deno_ast: https://github.com/denoland/deno_ast/blob/0.50.3/Cargo.toml

swc_core = "=57.0.0"
swc_atoms = "=9.0.0"
swc_common = "=18.0.1"
swc_config = "=3.1.2"
swc_config_macro = "=1.0.1"
swc_ecma_ast = "=20.0.1"
swc_ecma_codegen = "=23.0.0"
swc_ecma_codegen_macros = "=2.0.2"
swc_ecma_loader = "=18.0.0"
swc_ecma_lexer = "=33.0.0"
swc_ecma_parser = "=34.0.0"
swc_ecma_transforms_base = { version = "=37.0.0", features = [
  "inline-helpers",
] }
swc_ecma_transforms_classes = "=37.0.0"
swc_ecma_transforms_compat = "=43.0.0"
swc_ecma_transforms_macros = "=1.0.1"
swc_ecma_transforms_optimization = "=39.0.0"
swc_ecma_transforms_proposal = "=37.0.0"
swc_ecma_transforms_react = "=41.0.0"
swc_ecma_transforms_typescript = "=41.0.0"
swc_ecma_utils = "=26.0.1"
swc_ecma_visit = "=20.0.0"
swc_eq_ignore_macros = "=1.0.1"
# swc_bundler = "=32.0.0"
# swc_graph_analyzer = "=14.0.1"
swc_macros_common = "=1.0.1"
# swc_sourcemap = "=9.3.4"
swc_trace_macro = "=2.0.2"
swc_visit = "=2.0.1"

v8 = { version = "=146.0.0", default-features = false, features = [
  "use_custom_libcxx",
] }

# NOTE: Javascript dependencies always keep the same with `deno` }

# Debug
[profile.dev.package.v8]
opt-level = 1

# Nightly
[profile.nightly]
inherits = "release"
debug = true
strip = true

# Release
[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = "symbols"
panic = "abort"
