[workspace]
members = ["rsvim_cli", "rsvim_core"]
resolver = "3"

[workspace.package]
authors = ["Lin Rongbin <linrongbin16@outlook.com>"]
categories = ["text-editors"]
documentation = "https://rsvim.github.io/"
edition = "2024"
exclude = [".DS_Store"]
homepage = "https://rsvim.github.io/"
keywords = ["editor", "neovim", "terminal", "text-editor", "vim"]
license = "Vim"
readme = "README.md"
repository = "https://github.com/rsvim/rsvim"
rust-version = "1.89.0"
version = "0.1.2"

[workspace.dependencies]
rsvim_core = { version = "0.1.2", path = "./rsvim_core" }

# anyhow = "1"
arcstr = { version = "1.2", features = ["std"] }
ascii = "1.1"
assert_fs = "1.1"
async-trait = "0.1"
bitflags = "2.11"
# bytes = { version = "1" }
compact_str = "0.9"
crossterm = { version = "0.29", features = ["event-stream"] }
derive_builder = "0.20"
dirs = "6.0"
encoding_rs = "0.8"
env_filter = "1.0"
fern = "0.7"
foldhash = "0.2"
futures = "0.3"
geo = "0.32"
git2 = "0.20"
# heed = "0.20.5"
icu = { version = "2", features = ["compiled_data"] }
itertools = "0.14"
jiff = { version = "0.2", features = ["tzdb-bundle-always"] }
lexopt = "0.3"
litemap = "0.8"
log = { version = "0.4", features = [
  "max_level_trace",
  "release_max_level_error",
] }
lru = "0.16"
mimalloc-safe = "0.1"
normpath = "1.5"
num-traits = "0.2"
once_cell = { version = "1.21", features = ["parking_lot"] }
oxc_resolver = "11.19"
parking_lot = "0.12"
paste = "1.0"
path-absolutize = "3.1"
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
# rand = "0.8.5"
regex = "1.12"
ropey = { version = "1.6", default-features = false }
serde = { version = "1", features = ["derive"] }
# serde_json = "1"
snmalloc-rs = "0.3"
strum = "0.28"
strum_macros = "0.27"
taffy = "0.9"
thiserror = "2"
tikv-jemallocator = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
# tokio-stream = { version = "0.1.16", features = ["full"] }
toml = { version = "1.0", features = ["fast_hash"] }
# tracing = { version = "0.1", features = [
#   "max_level_trace",
#   "release_max_level_error",
# ] }
# tracing-appender = { version = "0.2", features = ["parking_lot"] }
# tracing-subscriber = { version = "0.3", features = [
#   "env-filter",
#   "parking_lot",
# ] }
tree-sitter = "0.26"
tree-sitter-loader = "0.26"
tree-sitter-md = "0.5"
tree-sitter-rust = "0.24"
tree-sitter-toml-ng = "0.7"
unicode-width = "0.2"
# url = "2.5.7"
# zstd = "0.13.3"

# NOTE: Javascript dependencies always keep the same with `deno` {

# deno: https://github.com/denoland/deno/blob/v2.5.4/Cargo.toml
# deno_core: https://github.com/denoland/deno_core/blob/0.362.0/Cargo.toml
# deno_ast: https://github.com/denoland/deno_ast/blob/0.50.3/Cargo.toml

swc_atoms = "=9.0.0"
swc_bundler = "=44.0.0"
swc_common = "=19.0.0"
swc_config = "=4.0.0"
swc_config_macro = "=1.0.1"
swc_core = "=58.0.1"
swc_ecma_ast = "=21.0.0"
swc_ecma_codegen = "=24.0.0"
swc_ecma_codegen_macros = "=2.0.2"
swc_ecma_lexer = "=34.0.0"
swc_ecma_loader = "=19.0.0"
swc_ecma_parser = "=35.0.0"
swc_ecma_transforms_base = { version = "=38.0.0", features = [
  "inline-helpers",
] }
swc_ecma_transforms_classes = "=38.0.0"
swc_ecma_transforms_compat = "=44.0.0"
swc_ecma_transforms_macros = "=1.0.1"
swc_ecma_transforms_optimization = "=40.0.0"
swc_ecma_transforms_proposal = "=38.0.0"
swc_ecma_transforms_react = "=42.0.0"
swc_ecma_transforms_typescript = "=42.0.0"
swc_ecma_utils = "=27.0.0"
swc_ecma_visit = "=21.0.0"
swc_eq_ignore_macros = "=1.0.1"
swc_graph_analyzer = "=14.0.1"
swc_macros_common = "=1.0.1"
swc_sourcemap = "=10.0.2"
swc_trace_macro = "=2.0.2"
swc_visit = "=2.0.1"

v8 = { version = "=146.1.0", default-features = false, features = [
  "use_custom_libcxx",
] }

# NOTE: Javascript dependencies always keep the same with `deno` }

# Debug
[profile.dev.package.v8]
opt-level = 1

# Nightly
[profile.nightly]
debug = true
inherits = "release"

# Release
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
