[workspace]
members = ["rsvim_cli", "rsvim_core"]
resolver = "3"

[workspace.package]
authors = ["Lin Rongbin <linrongbin16@outlook.com>"]
categories = ["text-editors"]
documentation = "https://rsvim.github.io/"
edition = "2024"
exclude = [".DS_Store"]
homepage = "https://rsvim.github.io/"
keywords = ["editor", "neovim", "terminal", "text-editor", "vim"]
license = "Vim"
readme = "README.md"
repository = "https://github.com/rsvim/rsvim"
rust-version = "1.89.0"
version = "0.1.2"

[workspace.dependencies]
rsvim_core = { version = "0.1.2", path = "./rsvim_core" }

arcstr = { version = "1.2", features = ["std"] }
ascii = "1.1"
assert_fs = "1.1"
async-trait = "0.1"
bitflags = "2.11"
clap = { version = "4.6", default-features = false, features = [
  "std",
  "help",
  "usage",
  "derive",
] }
compact_str = "0.9"
criterion = { version = "0.8", features = ["async_tokio"] }
crossterm = { version = "0.29", features = ["event-stream"] }
derive_builder = "0.20"
dirs = "6.0"
encoding_rs = "0.8"
env_filter = "1.0"
fastrand = "2.3"
fern = "0.7"
foldhash = "0.2"
futures = "0.3"
geo = "0.32"
git2 = "0.20"
icu = "2"
itertools = "0.14"
jiff = "0.2"
litemap = "0.8"
log = { version = "0.4", features = [
  "max_level_trace",
  "release_max_level_error",
] }
lru = "0.16"
mimalloc = "0.1"
normpath = "1.5"
num-traits = "0.2"
oxc_resolver = "11.19"
paste = "1.0"
path-absolutize = "3.1"
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
regex = "1.12"
roaring = "0.11"
ropey = { version = "1.6", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.15"
strum = "0.28"
strum_macros = "0.28"
taffy = "0.10"
thiserror = "2"
tikv-jemallocator = "0.6"
tokio = { version = "1", features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "net",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-util = { version = "0.7", features = ["full"] }
toml = { version = "1.1", features = ["fast_hash"] }
tree-sitter = "0.26"
tree-sitter-c = "0.24"
tree-sitter-html = "0.23"
tree-sitter-loader = "0.26"
tree-sitter-md = "0.5"
tree-sitter-rust = "0.24"
tree-sitter-toml-ng = "0.7"
unicode-width = "0.2"

# NOTE: Javascript dependencies always keep the same with `deno` {

# deno: https://github.com/denoland/deno/blob/v2.5.4/Cargo.toml
# deno_core: https://github.com/denoland/deno_core/blob/0.362.0/Cargo.toml
# deno_ast: https://github.com/denoland/deno_ast/blob/0.50.3/Cargo.toml

swc_atoms = "=9.0.0"
swc_bundler = "=47.0.0"
swc_common = "=21.0.1"
swc_config = "=4.0.1"
swc_config_macro = "=1.0.1"
swc_core = "=63.1.1"
swc_ecma_ast = "=23.0.0"
swc_ecma_codegen = "=26.0.1"
swc_ecma_codegen_macros = "=2.0.2"
swc_ecma_lexer = "=37.0.0"
swc_ecma_loader = "=21.0.0"
swc_ecma_parser = "=38.0.1"
swc_ecma_transforms_base = { version = "=41.0.1", features = [
  "inline-helpers",
] }
swc_ecma_transforms_classes = "=41.0.0"
swc_ecma_transforms_compat = "=47.0.0"
swc_ecma_transforms_macros = "=1.0.1"
swc_ecma_transforms_optimization = "=43.0.0"
swc_ecma_transforms_proposal = "=41.0.1"
swc_ecma_transforms_react = "=45.0.0"
swc_ecma_transforms_typescript = "=45.0.2"
swc_ecma_utils = "=29.1.0"
swc_ecma_visit = "=23.0.0"
swc_eq_ignore_macros = "=1.0.1"
swc_graph_analyzer = "=14.0.1"
swc_macros_common = "=1.0.1"
swc_sourcemap = "=10.0.2"
swc_trace_macro = "=2.0.2"
swc_visit = "=2.0.1"

deno_core_icudata = "0.77"
v8 = { version = "=147.0.0", default-features = false, features = [
  "use_custom_libcxx",
  "simdutf",
] }

# NOTE: Javascript dependencies always keep the same with `deno` }

[workspace.lints.clippy]
collapsible_else_if = "allow"
collapsible_if = "allow"
new_without_default = "allow"
nonminimal_bool = "allow"

# Debug
[profile.dev.package.v8]
opt-level = 1

# Nightly
[profile.nightly]
debug = true
debug-assertions = true
inherits = "release"

# Release
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
