[package]
name = "rsvim_allocator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
description = "The allocator library for RSVIM editor."

[features]
default = []
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]

# unix && !macos && !emscripten && feature=tikv-jemallocator
# Feature 'background_threads' is unsupported on MacOS: <https://github.com/jemalloc/jemalloc/issues/843>.
[target.'cfg(all(target_family = "unix", not(target_os = "macos"), not(target_os = "emscripten"), feature = "jemalloc"))'.dependencies]
tikv-jemallocator = { workspace = true, features = [
  "disable_initial_exec_tls",
  "background_threads",
], optional = true }

# unix && macos && feature=tikv-jemallocator
[target.'cfg(all(target_family = "unix", target_os = "macos", feature = "jemalloc"))'.dependencies]
tikv-jemallocator = { workspace = true, features = [
  "disable_initial_exec_tls",
], optional = true }
