[package]
name = "rsvim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
description = "The RSVIM text editor."

[features]
default = []
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc-safe"]
snmalloc = ["dep:snmalloc-rs"]

[dependencies]
rsvim_core = { workspace = true }

log = { workspace = true, features = [
  "max_level_trace",
  "release_max_level_error",
] }
mimalloc-safe = { workspace = true, optional = true }
once_cell = { workspace = true, features = ["parking_lot"] }
snmalloc-rs = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
# zstd = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }

[build-dependencies]
rsvim_core = { workspace = true }

git2 = { workspace = true }
swc_core = { workspace = true }
toml = { workspace = true }
# zstd = { workspace = true }
