[package]
authors.workspace = true
categories.workspace = true
description = "The RSVIM text editor."
documentation.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsvim"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["typescript"]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc-safe"]
snmalloc = ["dep:snmalloc-rs"]
typescript = ["rsvim_core/typescript"]

[dependencies]
rsvim_core = { workspace = true, default-features = false, features = [
  "simd",
  "unicode_lines",
] }

log = { workspace = true, features = [
  "max_level_trace",
  "release_max_level_error",
] }
mimalloc-safe = { workspace = true, optional = true }
once_cell = { workspace = true, features = ["parking_lot"] }
snmalloc-rs = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
# zstd = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }

[build-dependencies]
rsvim_core = { workspace = true }

foldhash = { workspace = true }
git2 = { workspace = true }
swc_core = { workspace = true }
toml = { workspace = true, features = ["fast_hash"] }
# zstd = { workspace = true }
