[package]
authors.workspace = true
categories.workspace = true
description = "The RSVIM text editor."
documentation.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsvim"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["icudata", "tzdata", "typescript", "wasm"]
icudata = ["rsvim_core/icudata"]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc-safe"]
typescript = ["rsvim_core/typescript"]
tzdata = ["rsvim_core/tzdata"]
wasm = ["rsvim_core/wasm"]

[dependencies]
rsvim_core = { workspace = true }

clap = { workspace = true, default-features = false, features = [
  "std",
  "help",
  "usage",
  "derive",
] }
log = { workspace = true, features = [
  "max_level_trace",
  "release_max_level_error",
] }
mimalloc-safe = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
# zstd = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }

[build-dependencies]
rsvim_core = { workspace = true }

foldhash = { workspace = true }
git2 = { workspace = true }
swc_core = { workspace = true }
toml = { workspace = true, features = ["fast_hash"] }
# zstd = { workspace = true }

[lints]
workspace = true
