[package]
authors.workspace = true
categories.workspace = true
description = "The core library for RSVIM text editor."
documentation.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsvim_core"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doctest = false

[features]
# NOTE: When running miri, disable default features ('simd'), only enable 'unicode_lines' feature:
# `cargo +nightly miri nextest run -p rsvim_core -F unicode_lines --no-default-features`
default = ["simd", "unicode_lines"]
simd = ["ropey/simd"]
unicode_lines = ["ropey/unicode_lines"]

[dependencies]
# anyhow = { workspace = true }
arcstr = { workspace = true, features = ["std"] }
ascii = { workspace = true }
async-trait = { workspace = true }
compact_str = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
derive_builder = { workspace = true }
dirs = { workspace = true }
encoding_rs = { workspace = true }
env_filter = { workspace = true }
fern = { workspace = true }
foldhash = { workspace = true }
futures = { workspace = true }
geo = { workspace = true }
icu = { workspace = true, features = ["compiled_data"] }
itertools = { workspace = true }
jiff = { workspace = true, features = ["tzdb-bundle-always"] }
lexopt = { workspace = true }
litemap = { workspace = true }
log = { workspace = true, features = [
  "max_level_trace",
  "release_max_level_error",
] }
lru = { workspace = true }
normpath = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true, features = ["parking_lot"] }
oxc_resolver = { workspace = true }
parking_lot = { workspace = true }
paste = { workspace = true }
path-absolutize = { workspace = true }
postcard = { workspace = true, default-features = false, features = [
  "use-std",
] }
ropey = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
# serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
taffy = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
toml = { workspace = true, features = ["fast_hash"] }
tree-sitter = { workspace = true }
tree-sitter-loader = { workspace = true }
tree-sitter-md = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-toml-ng = { workspace = true }
# url = { workspace = true }
# zstd = { workspace = true }

# NOTE: Javascript dependencies {

swc_atoms = { workspace = true }
swc_common = { workspace = true }
swc_config = { workspace = true }
swc_config_macro = { workspace = true }
swc_ecma_ast = { workspace = true }
swc_ecma_codegen = { workspace = true }
swc_ecma_codegen_macros = { workspace = true }
swc_ecma_lexer = { workspace = true }
swc_ecma_loader = { workspace = true }
swc_ecma_parser = { workspace = true }
swc_ecma_transforms_base = { workspace = true, features = ["inline-helpers"] }
swc_ecma_transforms_classes = { workspace = true }
swc_ecma_transforms_compat = { workspace = true }
swc_ecma_transforms_macros = { workspace = true }
swc_ecma_transforms_optimization = { workspace = true }
swc_ecma_transforms_proposal = { workspace = true }
swc_ecma_transforms_react = { workspace = true }
swc_ecma_transforms_typescript = { workspace = true }
swc_ecma_utils = { workspace = true }
swc_ecma_visit = { workspace = true }
swc_eq_ignore_macros = { workspace = true }
# swc_bundler = { workspace = true }
# swc_graph_analyzer = { workspace = true }
swc_macros_common = { workspace = true }
# swc_sourcemap = { workspace = true }
swc_trace_macro = { workspace = true }
swc_visit = { workspace = true }

v8 = { workspace = true, default-features = false, features = [
  "use_custom_libcxx",
] }

# NOTE: Javascript dependencies }

[dev-dependencies]
assert_fs = { workspace = true }
bitflags = { workspace = true }
regex = { workspace = true }
# tracing = { workspace = true, features = [
#   "max_level_trace",
#   "release_max_level_error",
# ] }
# tracing-appender = { workspace = true, features = ["parking_lot"] }
# tracing-subscriber = { workspace = true, features = [
#   "env-filter",
#   "parking_lot",
# ] }
unicode-width = { workspace = true }
