[package]
authors.workspace = true
categories.workspace = true
description = "The core library for RSVIM text editor."
documentation.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsvim_core"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doctest = false

[features]
default = ["unicode", "simd"]
icudata = ["dep:deno_core_icudata", "icu/compiled_data"]
simd = ["ropey/simd"]
typescript = [
  "dep:swc_atoms",
  "dep:swc_bundler",
  "dep:swc_common",
  "dep:swc_config",
  "dep:swc_config_macro",
  "dep:swc_ecma_ast",
  "dep:swc_ecma_codegen",
  "dep:swc_ecma_codegen_macros",
  "dep:swc_ecma_lexer",
  "dep:swc_ecma_loader",
  "dep:swc_ecma_parser",
  "dep:swc_ecma_transforms_base",
  "dep:swc_ecma_transforms_classes",
  "dep:swc_ecma_transforms_compat",
  "dep:swc_ecma_transforms_macros",
  "dep:swc_ecma_transforms_optimization",
  "dep:swc_ecma_transforms_proposal",
  "dep:swc_ecma_transforms_react",
  "dep:swc_ecma_transforms_typescript",
  "dep:swc_ecma_utils",
  "dep:swc_ecma_visit",
  "dep:swc_eq_ignore_macros",
  "dep:swc_graph_analyzer",
  "dep:swc_macros_common",
  "dep:swc_sourcemap",
  "dep:swc_trace_macro",
  "dep:swc_visit",
]
tzdata = ["jiff/tzdb-bundle-always"]
unicode = ["ropey/unicode_lines"]
wasm = []

[dependencies]
# anyhow = { workspace = true }
arcstr = { workspace = true, features = ["std"] }
ascii = { workspace = true }
async-trait = { workspace = true }
# bumpalo = { workspace = true, features = ["collections"] }
compact_str = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
derive_builder = { workspace = true }
dirs = { workspace = true }
encoding_rs = { workspace = true }
env_filter = { workspace = true }
fern = { workspace = true }
foldhash = { workspace = true }
futures = { workspace = true }
geo = { workspace = true }
icu = { workspace = true }
itertools = { workspace = true }
jiff = { workspace = true }
lexopt = { workspace = true }
litemap = { workspace = true }
log = { workspace = true, features = [
  "max_level_trace",
  "release_max_level_error",
] }
lru = { workspace = true }
normpath = { workspace = true }
num-traits = { workspace = true }
oxc_resolver = { workspace = true }
paste = { workspace = true }
path-absolutize = { workspace = true }
postcard = { workspace = true, default-features = false, features = [
  "use-std",
] }
roaring = { workspace = true }
ropey = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
# serde_json = { workspace = true }
smallvec = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
taffy = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
toml = { workspace = true, features = ["fast_hash"] }
tree-sitter = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-html = { workspace = true }
tree-sitter-loader = { workspace = true }
tree-sitter-md = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-toml-ng = { workspace = true }
# url = { workspace = true }
# zstd = { workspace = true }

# NOTE: Javascript dependencies {

swc_atoms = { workspace = true, optional = true }
swc_bundler = { workspace = true, optional = true }
swc_common = { workspace = true, optional = true }
swc_config = { workspace = true, optional = true }
swc_config_macro = { workspace = true, optional = true }
swc_ecma_ast = { workspace = true, optional = true }
swc_ecma_codegen = { workspace = true, optional = true }
swc_ecma_codegen_macros = { workspace = true, optional = true }
swc_ecma_lexer = { workspace = true, optional = true }
swc_ecma_loader = { workspace = true, optional = true }
swc_ecma_parser = { workspace = true, optional = true }
swc_ecma_transforms_base = { workspace = true, optional = true, features = [
  "inline-helpers",
] }
swc_ecma_transforms_classes = { workspace = true, optional = true }
swc_ecma_transforms_compat = { workspace = true, optional = true }
swc_ecma_transforms_macros = { workspace = true, optional = true }
swc_ecma_transforms_optimization = { workspace = true, optional = true }
swc_ecma_transforms_proposal = { workspace = true, optional = true }
swc_ecma_transforms_react = { workspace = true, optional = true }
swc_ecma_transforms_typescript = { workspace = true, optional = true }
swc_ecma_utils = { workspace = true, optional = true }
swc_ecma_visit = { workspace = true, optional = true }
swc_eq_ignore_macros = { workspace = true, optional = true }
swc_graph_analyzer = { workspace = true, optional = true }
swc_macros_common = { workspace = true, optional = true }
swc_sourcemap = { workspace = true, optional = true }
swc_trace_macro = { workspace = true, optional = true }
swc_visit = { workspace = true, optional = true }

deno_core_icudata = { workspace = true, optional = true }
v8 = { workspace = true, default-features = false, features = [
  "use_custom_libcxx",
] }

# NOTE: Javascript dependencies }

[dev-dependencies]
assert_fs = { workspace = true }
bitflags = { workspace = true }
regex = { workspace = true }
# tracing = { workspace = true, features = [
#   "max_level_trace",
#   "release_max_level_error",
# ] }
# tracing-appender = { workspace = true }
# tracing-subscriber = { workspace = true, features = [
#   "env-filter",
# ] }
unicode-width = { workspace = true }

[lints]
workspace = true
